Added a bulid script to package.json that compiles .scss to .css and updated the import path of the compiled css in index.html

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "sass ./src/styles/index.scss ./public/dist/styles/index.css"
+  },
   "devDependencies": {
     "sass": "^1.63.6",
     "tsc": "^2.0.4"
