Updated the build script in package.json to compile typescript files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "sass ./src/styles/index.scss ./public/dist/styles/index.css"
+    "build": "sass ./src/styles/index.scss ./public/dist/styles/index.css && tsc"
   },
   "devDependencies": {
     "sass": "^1.63.6",
