Updated NGINX config to point frontend at public/ instead of directory root to prevent access to src/ directory

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -20,7 +20,7 @@ server {
     }
 
     location / {
-        root /var/www/html/frontend;
+        root /var/www/html/frontend/public;
         try_files $uri $uri/ /index.html;
     }
 }
