--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
         "target": "ES6",
         "module": "commonjs",
         "outDir": "./public/dist/scripts",
@@ -11,5 +10,6 @@
         "strict": true,
         "sourceMap": true,
         "forceConsistentCasingInFileNames": true,
+        "lib": ["ES2019", "dom"],
     }
 }
