--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,5 +9,10 @@
             "name": "timkrysta",
             "email": "krystatymoteusz@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^10.2",
+        "guzzlehttp/guzzle": "^7.7",
+        "fakerphp/faker": "^1.23"
+    }
 }
