--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   
   composer:
     image: composer:latest
-    command: sh -c "composer install --optimize-autoloader --no-dev --no-interaction"
+    command: sh -c "composer install --optimize-autoloader --no-interaction"
     working_dir: /app
     volumes:
       - ./backend:/app 
